; ModuleID = '/home/carl/AnghaBench/linux/net/core/extr_net_namespace.c_unregister_pernet_operations.c'
source_filename = "/home/carl/AnghaBench/linux/net/core/extr_net_namespace.c_unregister_pernet_operations.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pernet_operations = type { i32* }

@net_generic_ids = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pernet_operations*)* @unregister_pernet_operations to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @unregister_pernet_operations(%struct.pernet_operations* %0) #0 {
  %2 = alloca %struct.pernet_operations*, align 8
  store %struct.pernet_operations* %0, %struct.pernet_operations** %2, align 8
  %3 = load %struct.pernet_operations*, %struct.pernet_operations** %2, align 8
  %4 = call i32 @__unregister_pernet_operations(%struct.pernet_operations* %3)
  %5 = call i32 (...) @rcu_barrier()
  %6 = load %struct.pernet_operations*, %struct.pernet_operations** %2, align 8
  %7 = getelementptr inbounds %struct.pernet_operations, %struct.pernet_operations* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %10, label %16

10:                                               ; preds = %1
  %11 = load %struct.pernet_operations*, %struct.pernet_operations** %2, align 8
  %12 = getelementptr inbounds %struct.pernet_operations, %struct.pernet_operations* %11, i32 0, i32 0
  %13 = load i32*, i32** %12, align 8
  %14 = load i32, i32* %13, align 4
  %15 = call i32 @ida_free(i32* @net_generic_ids, i32 %14)
  br label %16

16:                                               ; preds = %10, %1
  ret void
}

declare dso_local i32 @__unregister_pernet_operations(%struct.pernet_operations*) #1

declare dso_local i32 @rcu_barrier(...) #1

declare dso_local i32 @ida_free(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
